--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <h1>BetKing.io is Closed</h1>
     <p>Due to a recent hack BetKing has now closed.</p>
 
-<p>We are working to recover funds and return balances and bankroll investments back to users asap.
-We aim to have all balances returned to users by the end of January 2020.</p>
+<p>We are working to recover funds and return balances and bankroll investments back to users asap.</p>
+<p>We aim to have all balances returned to users by the end of January 2020.</p>
 
 <p>All users with significant balances have been contacted by email or Telegram. If you have not received and email and had BTC, ETH, EOS or LTC on the site please email support@betking.io.</p>
 
