--- a/index.html
+++ b/index.html
@@ -257,11 +257,11 @@
               </div>
             </div>
 
-            <!-- <div class="col-md-4">
+            <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                <a href="" class="img-link"><img src="./img/cloudbet.jpg"/></a>
+                <a href="http://bit.ly/CloudbetSignup" class="img-link"><img src="./img/cloudbet.jpg"/></a>
                 <div class="card-body text-center">
-                 <h5><strong>$50</strong> Welcome Bonus<br>for BetKing Players!</h5>
+                 <!-- <h5><strong>$50</strong> Welcome Bonus<br>for BetKing Players!</h5> -->
                  <br>
                  <br>
                  <ul class="list-display list-checkmarks">
@@ -278,12 +278,12 @@
                   <br />
                   <div class="">
                     <p>
-                      <a href="" class="btn btn-success btn-lg">Signup</a>
+                      <a href="http://bit.ly/CloudbetSignup" class="btn btn-success btn-lg">Signup</a>
                     </p>
                   </div>
                 </div>
               </div>
-            </div> -->
+            </div>
 
             
             <div class="col-md-4">
