--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>BetKing.io </title>
+    <title>BetKing.io</title>
     <link rel="canonical" href="https://betking.io" />
     <link rel="icon" href="./img/favicon.png" />
     
@@ -201,6 +201,62 @@
 
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
+                <a href="http://bit.ly/Sportsbetio1" class="img-link"><img src="./img/sportsbet.png"/></a>
+                <div class="card-body text-center">
+                  <!-- <h5><strong>$50</strong> Welcome Bonus<br>for BetKing Players!</h5> -->
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <ul class="list-display list-checkmarks">
+                    <li>Daily price boost</li>
+                    <li>Instant cashout</li>
+                    <li>Free bet on signup</li>
+                  </ul>
+                  <br />
+                  <img src="./img/btc.png" width="25" />
+                  <img src="./img/eth.png" width="25" />
+                  <img src="./img/mastercard.png" width="25" />
+                  <br />
+                  <br />
+                  <div class="">
+                    <p>
+                      <a href="http://bit.ly/Sportsbetio1" class="btn btn-success btn-lg">Signup</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm">
+                <a href="http://bit.ly/BitCasino1" class="img-link"><img src="./img/bitcasino.jpg"/></a>
+                <div class="card-body text-center">
+                  <!-- <h5><strong>$50</strong> Welcome Bonus<br>for BetKing Players!</h5> -->
+                  <br>
+                  <br>
+                  <ul class="list-display list-checkmarks">
+                    <li>10% Cashback</li>
+                    <li>VIP Loyalty Rewards</li>
+                    <li>1000's of games</li>
+                  </ul>
+                  <br />
+                  <img src="./img/btc.png" width="25" />
+                  <img src="./img/mastercard.png" width="25" />
+                  <br />
+                  <br />
+                  <div class="">
+                    <p>
+                      <a href="http://bit.ly/BitCasino1" class="btn btn-success btn-lg">Signup</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm">
                 <a href="http://bit.ly/StakeDotCom" class="img-link"><img src="./img/stake.jpg"/></a>
                 <div class="card-body text-center">
                   <h5><strong>$35</strong> Welcome Bonus<br><strong>+10%</strong> Rake Back<br>for BetKing Players!</h5>
@@ -224,33 +280,6 @@
                   <div class="">
                     <p>
                       <a href="http://bit.ly/StakeDotCom" class="btn btn-success btn-lg">Signup</a>
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-
-            <div class="col-md-4">
-              <div class="card mb-4 shadow-sm">
-                <a href="http://bit.ly/BitCasino1" class="img-link"><img src="./img/bitcasino.jpg"/></a>
-                <div class="card-body text-center">
-                  <!-- <h5><strong>$50</strong> Welcome Bonus<br>for BetKing Players!</h5> -->
-                  <br>
-                  <br>
-                  <ul class="list-display list-checkmarks">
-                    <li>10% Cashback</li>
-                    <li>VIP Loyalty Rewards</li>
-                    <li>1000's of games</li>
-                  </ul>
-                  <br />
-                  <img src="./img/btc.png" width="25" />
-                  <img src="./img/mastercard.png" width="25" />
-                  <br />
-                  <br />
-                  <div class="">
-                    <p>
-                      <a href="http://bit.ly/BitCasino1" class="btn btn-success btn-lg">Signup</a>
                     </p>
                   </div>
                 </div>
