--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <div class="card mb-4 shadow-sm">
                 <a href="http://bit.ly/mBItCasino" class="img-link"><img src="./img/mbitcasino.png"/></a>
                 <div class="card-body text-center">
-                  <h5><strong>150%</strong> Welcome Bonus<br><strong>+150</strong> Free Spins <br> for BetKing Players!</h5>
+                  <h5><strong>1.5 BTC</strong> Welcome Bonus<br><strong>+250</strong> Free Spins <br> for BetKing Players!</h5>
                   <br>
                   <ul class="list-display list-checkmarks">
                     <li>20% Cashback</li>
