--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="container">
           <div class="row">
 
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
                 <a href="http://bit.ly/mBItCasino" class="img-link"><img src="./img/mbitcasino.png"/></a>
                 <div class="card-body text-center">
@@ -173,7 +173,7 @@
                 </div>
               </div>
             </div>
-
+-->
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
                 <a href="http://bit.ly/OshiIO1" class="img-link"><img src="./img/oshi.png" height="300"/></a>
