--- a/index.html
+++ b/index.html
@@ -147,6 +147,32 @@
 
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
+                <a href="http://bit.ly/TrustDice1" class="img-link"><img src="./img/trustdice.jpg" height="300"/></a>
+                <div class="card-body text-center">
+                  <br>
+                  <br>
+                  <ul class="list-display list-checkmarks">
+                    <li>20% VIP Cashback</li>
+                    <li>100% Welcome Bonus</li>
+                    <li>Play to Earn Coins</li>
+                  </ul>
+                  <br />
+                  <img src="./img/btc.png" width="25" />
+                  <img src="./img/eth.png" width="25" />
+                  <img src="./img/eos.png" width="25" />
+                  <br />
+                  <br />
+                  <div class="">
+                    <p>
+                      <a href="http://bit.ly/TrustDice1" class="btn btn-success btn-lg">Signup</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm">
                 <a href="http://bit.ly/BitCasino1" class="img-link"><img src="./img/bitcasino.jpg"/></a>
                 <div class="card-body text-center">
                   <!-- <h5><strong>$50</strong> Welcome Bonus<br>for BetKing Players!</h5> -->
@@ -228,7 +254,6 @@
                 </div>
               </div>
             </div>
-
 
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
