--- a/index.html
+++ b/index.html
@@ -170,6 +170,35 @@
                 </div>
               </div>
             </div>
+
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm">
+                <a href="http://bit.ly/DuckDice1" class="img-link"><img src="./img/duckdice.png" height="300"/></a>
+                <div class="card-body text-center">
+                  <br>
+                  <br>
+                  <ul class="list-display list-checkmarks">
+                    <li>Wager contests</li>
+                    <li>Deposit Bonus</li>
+                    <li>Progressive Jackpot</li>
+                  </ul>
+                  <br />
+                  <img src="./img/btc.png" width="25" />
+                  <img src="./img/eth.png" width="25" />
+                  <img src="./img/eos.png" width="25" />
+                  <img src="./img/ltc.png" width="25" />
+                  <img src="./img/doge.png" width="25" />
+                  <img src="./img/bch.png" width="25" />
+                  <br />
+                  <br />
+                  <div class="">
+                    <p>
+                      <a href="http://bit.ly/DuckDice1" class="btn btn-success btn-lg">Signup</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
             
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
