--- a/index.html
+++ b/index.html
@@ -147,6 +147,36 @@
 
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
+                <a href="bit.ly/CryptoGamesNet1" class="img-link"><img src="./img/crypto-games.jpg" height="300"/></a>
+                <div class="card-body text-center">
+                  <br>
+                  <br>
+                  <ul class="list-display list-checkmarks">
+                    <li>Progressive Jackpot</li>
+                    <li>Low House Edge 0.8%</li>
+                    <li>Huge Contests</li>
+                  </ul>
+                  <br />
+                  <img src="./img/btc.png" width="25" />
+                  <img src="./img/eth.png" width="25" />
+                  <img src="./img/ltc.png" width="25" />
+                  <img src="./img/doge.png" width="25" />
+                  <img src="./img/bch.png" width="25" />
+                  <img src="./img/dash.png" width="25" />
+                  <img src="./img/neo.png" width="25" />
+                  <br />
+                  <br />
+                  <div class="">
+                    <p>
+                      <a href="bit.ly/CryptoGamesNet1" class="btn btn-success btn-lg">Signup</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm">
                 <a href="http://bit.ly/TrustDice1" class="img-link"><img src="./img/trustdice.jpg" height="300"/></a>
                 <div class="card-body text-center">
                   <br>
