--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                <a href="bit.ly/CryptoGamesNet1" class="img-link"><img src="./img/crypto-games.jpg" height="300"/></a>
+                <a href="http://bit.ly/CryptoGamesNet1" class="img-link"><img src="./img/crypto-games.jpg" height="300"/></a>
                 <div class="card-body text-center">
                   <br>
                   <br>
@@ -168,7 +168,7 @@
                   <br />
                   <div class="">
                     <p>
-                      <a href="bit.ly/CryptoGamesNet1" class="btn btn-success btn-lg">Signup</a>
+                      <a href="http://bit.ly/CryptoGamesNet1" class="btn btn-success btn-lg">Signup</a>
                     </p>
                   </div>
                 </div>
