--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
     </header>
 
     <main role="main">
+      <div class="text-center">
+        <br>
+        <a href="http://bit.ly/CoinDragon"><img src="./img//coindragon-banner.png"></a>
+      </div>
       <section class="jumbotron text-center">
         <div class="container">
           <h1>Get Exclusive Bonuses<br />from our Bitcoin Casino Partners!</h1>
@@ -144,6 +148,31 @@
       <div class="album py-5 bg-light">
         <div class="container">
           <div class="row">
+
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm">
+                <a href="http://bit.ly/CoinDragon" class="img-link"><img src="./img/coindragon.png" height="300"/></a>
+                <div class="card-body text-center">
+                  <br>
+                  <br>
+                  <ul class="list-display list-checkmarks">
+                    <li>30% Cashback</li>
+                    <li>Provably Fair Games</li>
+                    <li>Mobile friendly</li>
+                  </ul>
+                  <br />
+                  <img src="./img/btc.png" width="25" />
+                  <img src="./img/bch.png" width="25" />
+                  <br />
+                  <br />
+                  <div class="">
+                    <p>
+                      <a href="http://bit.ly/CoinDragon" class="btn btn-success btn-lg">Signup</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
 
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
