--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <main role="main">
       <div class="text-center">
         <br>
-        <a href="http://bit.ly/CoinDragon"><img src="./img//coindragon-banner.png"></a>
+        <a href="https://bit.ly/BitslerBK"><img src="./img/10.gif"></a>
       </div>
       <section class="jumbotron text-center">
         <div class="container">
