--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
+    <meta name="description" content="Best Bitcoin Casino" />
     <meta name="author" content="" />
     <title>BetKing.io</title>
     <link rel="canonical" href="https://betking.io" />
