--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
           
           <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
-              <a href="http://bit.ly/Sportsbetio1" class="img-link"><img src="./img/sportsbet.png" /></a>
+              <a href="https://bit.ly/GGpokerBK" class="img-link"><img src="./img/ggpoker.png" /></a>
               <div class="card-body text-center">
                 <br>
                 <br>
                 <ul class="list-display list-checkmarks">
-                  <li>Daily price boost</li>
-                  <li>Instant cashout</li>
+                  <li>Welcome Bonus</li>
+                  <li>Daily tournaments</li>
                 </ul>
                 <br />
                 <img src="./img/btc.png" width="25" />
@@ -192,7 +192,7 @@
                 <br />
                 <div class="">
                   <p>
-                    <a href="http://bit.ly/Sportsbetio1" class="btn btn-success btn-lg">Signup</a>
+                    <a href="https://bit.ly/GGpokerBK" class="btn btn-success btn-lg">Signup</a>
                   </p>
                 </div>
               </div>
