--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
                 <br>
                 <ul class="list-display list-checkmarks">
                   <li>Welcome Bonus</li>
+                  <li>Rakeback</li>
                   <li>Daily tournaments</li>
                 </ul>
                 <br />
@@ -227,40 +228,6 @@
               </div>
             </div>
           </div>
-
-
-          <div class="col-md-4">
-            <div class="card mb-4 shadow-sm">
-              <a href="http://bit.ly/PrimeDice1" class="img-link"><img src="./img/primedice.jpg" /></a>
-              <div class="card-body text-center">
-                <!-- <h5><strong>$50</strong> Welcome Bonus<br>for BetKing Players!</h5> -->
-                <br>
-                <br>
-                <ul class="list-display list-checkmarks">
-                  <li>Instant Withdrawals</li>
-                  <li>Daily Races</li>
-                  <li>VIP Rewards</li>
-                </ul>
-                <br />
-                <img src="./img/btc.png" width="25" />
-                <img src="./img/eth.png" width="25" />
-                <img src="./img/ltc.png" width="25" />
-                <img src="./img/xrp.png" width="25" />
-                <img src="./img/trx.png" width="25" />
-                <img src="./img/bch.png" width="25" />
-                <img src="./img/doge.png" width="25" />
-
-                <br />
-                <br />
-                <div class="">
-                  <p>
-                    <a href="http://bit.ly/PrimeDice1" class="btn btn-success btn-lg">Claim Bonus</a>
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-
                     
         </div>
       </div>
