--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <title>Best Bitcoin Casinos 2020 - Exlusive Bonuses</title>
   <meta name="description"
-    content="Reviews of the top 10 crypto casinos with exlcusive signup bonuses. Check our complete guide to the best online BTC cainos and gambling sites and get started with FREE bets." />
+    content="Check our complete guide to the best online BTC casinos and gambling sites and get started with FREE bets." />
   <meta name="author" content="BetKing.io - Dean Nolan" />
   <link rel="canonical" href="https://betking.io" />
   <link rel="icon" href="./img/favicon.png" />
@@ -134,7 +134,7 @@
     <section class="text-center">
       <div class="container pt-3">
         <h1>Best Bitcoin Casinos 2020</h1>
-        <p class="lead">A guide to the top 10 crypto casino and dice sites</p>
+        <p class="lead">A guide to the top crypto casino and dice sites</p>
       </div>
     </section>
 
