--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   <style>
     .list-display li {
       margin-bottom: 0.4rem;
-      font-size: 1.1rem;
+      font-size: 26px;
+      list-style-type: none;
     }
 
     .list-checkmarks {
@@ -57,11 +58,10 @@
 
     ul {
       display: inline-block;
+        padding:0;
     }
 
-    ul li:before {
-      content: '✓';
-    }
+    a
 
     li {
       text-align: left;
@@ -133,8 +133,8 @@
   <main role="main">
     <section class="text-center">
       <div class="container pt-3">
-        <h1>Best Bitcoin Casinos 2020</h1>
-        <p class="lead">A guide to the top crypto casino and dice sites</p>
+        <h1>BetKing $1500 Prize Draw</h1>
+        <p class="lead">November 2020</p>
       </div>
     </section>
 
@@ -148,11 +148,11 @@
               <a href="http://bit.ly/StakeDotCom" class="img-link"><img src="./img/stake.jpg" /></a>
               <div class="card-body text-center">
                 <br>
-                <br>
-                <ul class="list-display list-checkmarks">
-                  <li>10% Rakeback</li>
-                  <li>Daily Races</li>
-                  <li>VIP Rewards</li>
+                <h2>Prizes</h2>
+                <ul class="list-display">
+                  <li>1st - $250</li>
+                  <li>2nd - $150</li>
+                  <li>3rd - $100</li>
                 </ul>
                 <br />
                 <img src="./img/btc.png" width="25" />
@@ -167,8 +167,10 @@
                 <br />
                 <div class="">
                   <p>
-                    <a href="http://bit.ly/StakeDotCom" class="btn btn-success btn-lg">Claim Bonus</a>
+                    <a href="http://bit.ly/StakeDotCom" class="btn btn-success btn-lg">Signup</a>
                   </p>
+                  <p>Current Entries: 0</p>
+<p>Last updated 31/10/2020</p>
                 </div>
               </div>
             </div>
@@ -179,11 +181,11 @@
               <a href="https://bit.ly/GGpokerBK" class="img-link"><img src="./img/ggpoker.png" /></a>
               <div class="card-body text-center">
                 <br>
-                <br>
-                <ul class="list-display list-checkmarks">
-                  <li>Welcome Bonus</li>
-                  <li>Rakeback</li>
-                  <li>Daily tournaments</li>
+<h2>Prizes</h2>
+                <ul class="list-display">
+                  <li>1st - $250</li>
+                  <li>2nd - $150</li>
+                  <li>3rd - $100</li>
                 </ul>
                 <br />
                 <img src="./img/btc.png" width="25" />
@@ -195,6 +197,8 @@
                   <p>
                     <a href="https://bit.ly/GGpokerBK" class="btn btn-success btn-lg">Signup</a>
                   </p>
+<p>Current Entries: 0 </p>
+<p>Last updated 31/10/2020</p>
                 </div>
               </div>
             </div>
@@ -202,28 +206,27 @@
           
           <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
-              <a href="http://bit.ly/mBItCasino" class="img-link"><img src="./img/mbitcasino.png" /></a>
+              <a href="https://bit.ly/VerveCasino" class="img-link"><img src="./img/verve.png" /></a>
               <div class="card-body text-center">
-                <br>
-                <br>
-                <ul class="list-display list-checkmarks">
-                  <li>20% Cashback</li>
-                  <li>5 BTC Welcome Package</li>
-                  <li>2000+ Games</li>
+                <br><h2>Prizes</h2>
+                <ul class="list-display">
+<li>1st - $250</li>
+                  <li>2nd - $150</li>
+                  <li>3rd - $100</li>
                 </ul>
                 <br />
                 <img src="./img/btc.png" width="25" />
                 <img src="./img/eth.png" width="25" />
                 <img src="./img/ltc.png" width="25" />
                 <img src="./img/doge.png" width="25" />
-                <img src="./img/bch.png" width="25" />
-                <img src="./img/mastercard.png" width="25" />
                 <br />
                 <br />
                 <div class="">
                   <p>
-                    <a href="http://bit.ly/mBItCasino" class="btn btn-success btn-lg">Claim Bonus</a>
+                    <a href="https://bit.ly/VerveCasino" class="btn btn-success btn-lg">Signup</a>
                   </p>
+<p>Current Entries: 0</p>
+<p>Last updated 31/10/2020</p>
                 </div>
               </div>
             </div>
@@ -233,6 +236,18 @@
       </div>
     </div>
 
+    <div class="container pt-3 text-center" style="margin-bottom:100px; font-size:22px;">
+    <h2>How to Join</h2>
+    <div style="text-align:left;">
+    <ul>
+    <li>Signup to any of the casinos above using the links above. If you already have an account with the casino as a BetKing affiliate you can skip this step.</li>
+    <li>Email your username and the email address you signed up to the casino with to support@betking.io</li>
+    <li>Make a deposit of $10 or more and play during the month of November</li>
+    </p>
+
+    <p>All entries must be received by 30th November. To be eligible you must make a deposit of $10 or more during November. Winners will be chosen at random and winnings paid the first week of December to your casino balance. You can enter all three casino draws.</p>
+        </div>
+</div>
   </main>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
