--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <title>Best Bitcoin Casinos 2020 - Exlusive Bonuses</title>
+  <title>Best Bitcoin Casino 2021</title>
   <meta name="description"
     content="Check our complete guide to the best online BTC casinos and gambling sites and get started with FREE bets." />
   <meta name="author" content="BetKing.io - Dean Nolan" />
