--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <main role="main">
     <section class="text-center">
       <div class="container pt-3">
-        <h1>Relaunching soon...</h1>
+        <h1>Relaunching April 2021</h1>
       </div>
     </section>
 
