--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
     <section class="text-center">
       <div class="container pt-3">
         <h1>Relaunching May 2021</h1>
-        
+        <p>BetKing.io will relaunch in May. We will be going back to basics with the best dice game and crowdfunded banknrolls.</p>
+        <p>We're just putting the finishing touches on now...</p>
+	<br>
+	<img src="./img/bkp.png" style="width:100%">
       </div>
     </section>
 
