--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <p>BetKing.io will relaunch in May. We will be going back to basics with the best dice game and crowdfunded banknrolls.</p>
         <p>We're just putting the finishing touches on now...</p>
 	<br>
-	<img src="./img/bkp.png" style="width:100%">
+	<img src="./img/bkp.PNG" style="width:100%">
       </div>
     </section>
 
