--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
       <div class="container pt-3">
         <h1>Relaunching May 2021</h1>
         <p>BetKing.io will relaunch in May. We will be going back to basics with the best dice game and crowdfunded bannkrolls.</p>
-        <p>We're just putting the finishing touches on now...</p>
+	      <p>We will provide more details soon of token refunds</p>     
+        <p>Just putting the finishing touches on now...</p>
 	<br>
 	<img src="./img/bkp.PNG" style="width:100%">
       </div>
